--- a/src/Components/CartItem/CartItem.css
+++ b/src/Components/CartItem/CartItem.css
@@ -5,7 +5,7 @@
     padding: 20px;
     margin: 30px;
     font-size: 20px;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    background: linear-gradient(135deg, rgb(245 245 245), rgb(20 255 212 / 32%));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.18);
